fix: Update song properties and add liked song check in getTopSongsTodayByMyCountry method
